bin/testsuite/tests/compiler/src/errors/compiler4895.swg
#global testerror "Err0729"

const a = 0c1
//const b = 1